tests/negative/test_raw_add_cns_asgn.orb
fnc main () () {
    eval (sym (a:(raw cn) \(0 0)) (b:(raw cn) \(0 0)));
    eval (sym (ab (+ a b)));
    = ab \();
};